src/index.scss
@media (min-width: 768px) {
    .logo-margin{
        margin-left: 12% !important;
    }
}
.header-skew{
    background-color: #122030!important;
    transform: skewX(31deg) translateX(40%)!important;
    overflow: hidden;
    max-width: 100%;
    .inverse-header{
        transform: skewX(-31deg);
        font-size:12px;
    }
    a{
        cursor: pointer;
    }
}
.nav-cus-font{
    font-size: 0.75rem;
}
.header-section{
    max-width: 100%;
    overflow: hidden;
}
.social-header{
    position: fixed;
    color: white;
    right: 6%;
    top: 0.55rem;
    z-index: 999;
    font-size: 12px
}
.underline-block{
    text-align: center;
    margin-top: 0;
    margin-bottom: 1.25rem;
    display: block;
    .underline{
        background-color: #0d5195;
        display: inline-block;
        width: 50px;
        height: 3px;
    }
}
.card-bottom-caption{
    position: absolute;
    z-index: 9;
    bottom: 12%;
    left: 50%;
    color: white;
    transform: translateX(-50%);
}
.slider-caption{
    margin-bottom: 10.5rem;
}
.zoom{
    transition: transform 2s ease-in-out 0s;
}
.zoom:hover{
    transform: scale(1.5);
}
.underline-color{
    background-color: #007bff!important;
}
.footer-link{
    background-color: unset!important;
    border: unset;
    font-size: 0.75rem;
    a{
        font-size: 11px;
    }
    padding: 0.5rem!important;
}
.footer{
    p{
        font-size: 13px;
    }
    border-radius: 0;
}
.list-item-unset{
    background-color: unset;
    border: unset;
    padding: 0;
    i{
        font-size: 1%;
        margin-right: 0.5rem;
    }
    
}

@media (max-width:576px){
    .nav-logo{
        font-size: 1rem;
        max-width: 12%;
    }
}

.social-icon{
    position: absolute;
    color: white;
    right: 2%;
    top: 1.5%;
    font-size: 12px;
    z-index: 9999;
}
.footer-mb{
    margin-bottom: 0.75rem;
}

